@@ -3402,7 +3402,10 @@ For date-times to work correctly it is essential that the tables
 defining time zones are installed: these are usually in an OS compoent
 named something like @code{tzdata}. On most OSes they are required
 @c with glibc by glibc-common
-but installations of Alpine Linux have bee seen without them.
+but installations of Alpine Linux have been seen without them.  As from
+@R{} 4.3.0 there is a @command{configure} check that recent date-times
+to work correctly in different time zones which catches this when
+installing from source (but not for binary distributions).
 
 Those distributing binary versions of @R{} may need to be aware of the
 licences of the external libraries it is linked to (including `useful'
